tests/integrations/basic-fail/tests/actual_tests_bless/pass_with_annotation.rs
//@check-pass

//~ ERROR: the cake is a lie
fn main() {}
